# aco-wasm

./: .gitignore  .mise.toml  CLAUDE.md  README.md  package.json
education-wasm/: Cargo.toml
education-wasm/src/: ant.rs  city.rs  lib.rs  lib_original.rs  lib_safe.rs  pheromone.rs  renderer.rs
front/: biome.json  index.html  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
front/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts  routes.ts
front/src/components/: ACOVisualizer.tsx  EducationalACO.tsx
front/src/components/ui/: button.tsx  card.tsx  slider.tsx
front/src/hooks/: useACOEngine.ts  useEducationalACO.ts  useEducationalACOGlobal.ts
front/src/pages/: EducationPage.tsx  MainPage.tsx  TSPPage.tsx
front/src/routes/: education.tsx  index.tsx  tsp.tsx
scripts/: build-education-wasm.sh  build-front.sh  build-tsp-wasm.sh  build-wasm.sh  dev.sh
tsp-wasm/src/input/: mod.rs
tsp-wasm/src/rendering/: mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/src/aco/: ant.rs  colony.rs  mod.rs  pheromone.rs
wasm/src/geometry/: city.rs  distance.rs  mod.rs
wasm/src/rendering/: animation.rs  canvas.rs  mod.rs
wasm/src/simulation/: mod.rs
wasm/tests/: city_tests.rs
